# instrument-cluster

./: .gitignore  README.md  pyproject.toml
src/instrument_cluster/: backlight.py  config.py  main.py
src/instrument_cluster/addons/: installer.py
src/instrument_cluster/states/: dashboard_state.py  enter_ip_state.py  enter_url_state.py  setup_state.py  state.py  state_manager.py  state_types.py
src/instrument_cluster/telemetry/: demo.py  feed.py  mode.py  models.py  source.py  udp_jsonl.py
src/instrument_cluster/ui/: colors.py  constants.py  events.py  utils.py
src/instrument_cluster/ui/widgets/: bestlap_widget.py  delta_time_widget.py  delta_widget.py  fastest_lap_time_widget.py  gear_widget.py  lap_time_widget.py  lap_widget.py  predicted_lap_time_widget.py  predictedlap_widget.py  speed_widget.py
src/instrument_cluster/ui/widgets/base/: button.py  container.py  dropdown.py  label.py  line.py  textfield.py
