[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instrument-cluster"
version = "0.1.0"
description = "An Instrument Cluster"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "pydantic>=2.11.7",
    "pygame>=2.6.1",
    "scipy>=1.11.4",
]

[project.scripts]
instrument-cluster = "instrument_cluster.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
instrument_cluster = ["assets/**/*"]
